--- a/references.bib
+++ b/references.bib
@@ -11,7 +11,7 @@
 }
 
 @article{joyce1990identity,
-  title={Identity verification based on keystroke latency patterns},
+  title={Identity Authentication based on keystroke latency patterns},
   author={Joyce, Rick and Gupta, Gopal},
   journal={Communications of the ACM},
   volume={33},
@@ -59,69 +59,97 @@
   year={2017}
 }
 
+
+
 @inproceedings{zheng2011efficient,
   title={An efficient user verification system via mouse movements},
-  author={Zheng, Neng and Palaniswami, Marimuthu and Rao, Kotagiri},
-  booktitle={Proceedings of the 8th ACM journal on access control models and technologies},
-  year={2011}
+  author={Zheng, Nan and Paloski, Aaron and Wang, Haining},
+  booktitle={Proceedings of the 18th ACM Conference on Computer and Communications Security},
+  pages={139--150},
+  year={2011},
+  organization={ACM},
+  doi={10.1145/2046707.2046725}
 }
+
 
 % ==========================================
 % 3. DEEP LEARNING & ADAPTIVE SYSTEMS
 % ==========================================
 
 @article{kim2018user,
-  title={User-adaptive feature extraction for keystroke dynamics-based authentication},
-  author={Kim, J. and others},
-  journal={Computers \& Security},
-  year={2018}
+  title={Keystroke dynamics-based user authentication using freely typed text based on user-adaptive feature extraction and novelty detection},
+  author={Kim, Junhong and Kim, Haedong and Kang, Pilsung},
+  journal={Applied Soft Computing},
+  volume={62},
+  pages={1077--1087},
+  year={2018},
+  doi={10.1016/j.asoc.2017.09.045},
+  publisher={Elsevier}
 }
 
+
 @article{kim2024kdprint,
-  title={KDPrint: Passive Authentication Using Keystroke Dynamics-to-Image Encoding via Standardization},
-  author={Kim, Y. and Shin, D. and Kwon, N.},
+  title={KDPrint: Passive authentication using keystroke dynamics-to-image encoding via standardization},
+  author={Kim, Yooshin and Kwon, Namhyeok and Shin, Donghoon},
   journal={arXiv preprint arXiv:2405.01080},
-  year={2024}
+  year={2024},
+  url={https://arxiv.org/abs/2405.01080}
 }
+
+
 
 @article{kiyani2020continuous,
   title={Continuous user authentication featuring keystroke dynamics based on robust recurrent confidence model and ensemble learning approach},
-  author={Kiyani, Asim T and Lasebae, Aboubaker and Ali, Kamran and Rehman, Masood U and Haq, B},
+  author={Kiyani, Anum Tanveer and Lasebae, Aboubaker and Ali, Kamran and Ur Rehman, Masood and Haq, Bushra},
   journal={IEEE Access},
   volume={8},
   pages={156177--156189},
   year={2020},
+  doi={10.1109/ACCESS.2020.3019467},
   publisher={IEEE}
 }
 
+
+
 @article{pirzado2021keystroke,
   title={Keystroke dynamics based technique to enhance the security in smart devices},
-  author={Pirzado, S. S. and others},
-  journal={Mehran University Research Journal of Engineering and Technology},
-  volume={40},
+  author={Pirzado, Farman and Memon, Shahzad and Dhomeja, Lachman Das D. and Ahmed, Awais},
+  journal={KIET Journal of Computing and Information Sciences},
+  volume={4},
   number={1},
-  pages={123--133},
-  year={2021}
+  pages={14},
+  year={2021},
+  doi={10.51153/kjcis.v4i1.61},
+  url={https://doi.org/10.51153/kjcis.v4i1.61}
 }
+
+
+
 
 @article{rahman2021scalable,
-  title={Scalable behavioral authentication for mobile devices},
-  author={Rahman, M. and Islam, M. and others},
-  journal={Sensors},
-  volume={21},
-  number={14},
-  pages={4890},
-  year={2021}
+  title={Scalable behavioral authentication},
+  author={Islam, Md. Morshedul and Safavi-Naini, Reihaneh and Kneppers, Marc},
+  journal={IEEE Access},
+  volume={9},
+  pages={43458--43473},
+  year={2021},
+  doi={10.1109/ACCESS.2021.3065921},
+  publisher={IEEE}
 }
 
+
+
 @article{zareen2018user,
-  title={User authentication based on keystroke dynamics using Bayesian regularized neural network},
-  author={Zareen, N and Jilani, T and Arshad, U},
+  title={An authentication system using keystroke dynamics},
+  author={Zareen, N. and Jilani, T. and Arshad, U.},
   journal={International Journal of Advanced Computer Science and Applications},
   volume={9},
   number={10},
-  year={2018}
+  year={2018},
+  note={Unverified publication; accessed via ResearchGate},
+  url={https://www.researchgate.net/publication/323299694_An_authentication_system_using_keystroke_dynamics}
 }
+
 
 % ==========================================
 % 4. TECHNICAL METHODOLOGY (JL, SVDD, HE)
@@ -136,66 +164,101 @@
   publisher={Springer}
 }
 
+
+
 @incollection{johnson1984extensions,
   title={Extensions of Lipschitz mappings into a Hilbert space},
-  author={Johnson, William B and Lindenstrauss, Joram},
-  booktitle={Conference in modern analysis and probability},
+  author={Johnson, William B. and Lindenstrauss, Joram},
+  booktitle={Conference in Modern Analysis and Probability},
+  editor={Hedlund, G.},
+  series={Contemporary Mathematics},
+  volume={26},
   pages={189--206},
   year={1984},
-  publisher={American Mathematical Society}
+  publisher={American Mathematical Society},
+  address={Providence, RI, USA},
+  doi={10.1090/conm/026/737400}
 }
 
+
+
 @inproceedings{ruff2018deepsvdd,
-  title={Deep one-class classification},
-  author={Ruff, Lukas and Vandermeulen, Robert and Goernitz, Nico and Deecke, Lucas and Siddiqui, Shoaib A and Binder, Alexander and M{\"u}ller, Emmanuel and Kloft, Marius},
-  booktitle={International conference on machine learning},
+  title={Deep One-Class Classification},
+  author={Ruff, Lukas and Vandermeulen, Robert and Goernitz, Nico and Deecke, Lucas and Siddiqui, Shoaib Ahmed and Binder, Alexander and M{\"u}ller, Emmanuel and Kloft, Marius},
+  booktitle={Proceedings of the 35th International Conference on Machine Learning},
+  series={Proceedings of Machine Learning Research},
+  volume={80},
   pages={4393--4402},
   year={2018},
-  organization={PMLR}
+  url={https://proceedings.mlr.press/v80/ruff18a.html},
+  pdf={http://proceedings.mlr.press/v80/ruff18a/ruff18a.pdf}
 }
 
 % ==========================================
 % 5. DATASETS
 % ==========================================
 
+
+
+
 @misc{cmu2009benchmark,
-  title={Keystroke Dynamics Benchmark Dataset},
-  author={Killourhy, Kevin S and Maxion, Roy A},
+  title={CMU Keystroke Dynamics Benchmark Data Set},
+  author={Killourhy, Kevin S. and Maxion, Roy A.},
   year={2009},
-  howpublished={Carnegie Mellon University}
+  howpublished={\url{https://www.cs.cmu.edu/~keystroke/}},
+  note={Accessed: 2026-02-02},
+  institution={Carnegie Mellon University, CyLab}
 }
 
-@article{dhakal2018136m,
-  title={136 Million Keystrokes: A large-scale dataset for keystroke dynamics},
-  author={Dhakal, V. and Feit, A. M. and Kristensson, P. O. and Oulasvirta, A.},
-  journal={Scientific Data},
-  volume={5},
-  year={2018},
-  publisher={Nature Publishing Group}
+
+
+
+@inproceedings{dhakal2018136m,
+  author    = {Dhakal, Vivek and Feit, Anna M. and Kristensson, Per Ola and Oulasvirta, Antti},
+  title     = {Observations on Typing from 136 Million Keystrokes},
+  booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems (CHI ’18)},
+  year      = {2018},
+  publisher = {ACM},
+  doi       = {10.1145/3173574.3174220},
+  url       = {https://userinterfaces.aalto.fi/136Mkeystrokes/}
 }
 
-@inproceedings{edgehill2012dataset,
-  title={The Edge Hill University Keystroke and Mouse Dynamics Dataset},
-  author={Bours, Patrick},
-  booktitle={International Conference on Biometrics},
-  year={2012}
+
+
+
+
+@misc{edgehill2012dataset,
+  title={Behaviour Biometrics Dataset (Edge Hill KMT)},
+  author={Nnamoko, Nonso and Barrowclough, Joe and Liptrott, Mark and Korkontzelos, Ioannis},
+  year={2022},
+  publisher={Mendeley Data},
+  doi={10.17632/fnf8b85kr6.1},
+  url={https://data.mendeley.com/datasets/fnf8b85kr6/1}
 }
+
+
+
 
 @misc{reddy2025mouse,
-  title={Feature-Engineered Mouse Dynamics Dataset For Anomaly Detection},
-  author={Reddy, Dheeraj},
+  title={Feature‑Engineered Mouse Dynamics Dataset for Anomaly Detection},
+  author={Reddy, D.},
   year={2025},
-  howpublished={Figshare},
-  doi={10.6084/m9.figshare.29386898}
+  publisher={Figshare},
+  url={https://figshare.com/articles/dataset/feature_engineered_mouse_data_csv/29386898?file=55588529}
 }
 
-@article{suais2019bbmas,
-  title={Behavioral Biometrics Multi-device and multi-Activity from Same users (BB-MAS)},
-  author={Syracuse University and Assured Information Security},
-  journal={IEEE Dataport},
-  year={2019},
-  doi={10.21227/2q3r-8m28}
+
+
+
+@misc{suais2019bbmas,
+  title={{SU-AIS BB-MAS: Behavioral Biometrics Multi-device and Multi-Activity from Same Users Dataset}},
+  author={Belman, Amith K. and Wang, Li and Iyengar, Sundaraja S. and Sniatala, Pawel and Wright, Robert and Dora, Robert and Baldwin, Jacob and Jin, Zhanpeng and Phoha, Vir V.},
+  year={2020},
+  publisher={IEEE DataPort},
+  doi={10.21227/RPAZ-0H66},
+  url={https://doi.org/10.21227/RPAZ-0H66}
 }
+
 
 
 % ==========================================
@@ -213,21 +276,29 @@
   publisher={Elsevier}
 }
 
+
+
 @article{teoh2006random,
-  title={Random multispace quantization as an analytic mechanism for bio-hashing of biometric data},
-  author={Teoh, Andrew BJ and Ngo, David CL and Goh, Alwyn},
+  title={Random multispace quantization as an analytic mechanism for BioHashing of biometric and random identity inputs},
+  author={Teoh, Andrew B. J. and Goh, Alwyn and Ngo, David C. L.},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   volume={28},
   number={12},
   pages={1892--1901},
-  year={2006}
+  year={2006},
+  doi={10.1109/TPAMI.2006.250}
 }
 
-@inproceedings{wang2014alignment,
-  title={Alignment-free cancelable fingerprint templates based on m-triplets and keyed random projection},
-  author={Wang, Shi and Hu, Jiankun},
-  booktitle={2014 IEEE 13th International Conference on Trust, Security and Privacy in Computing and Communications},
-  pages={578--585},
+
+
+@article{wang2014alignment,
+  title={Design of alignment‐free cancelable fingerprint templates via curtailed circular convolution},
+  author={Wang, Song and Hu, Jiankun},
+  journal={Pattern Recognition},
+  volume={47},
+  pages={1321--1329},
   year={2014},
-  organization={IEEE}
+  doi={10.1016/j.patcog.2013.10.003},
+  publisher={Elsevier}
 }
+
